--- a/home/templates/404.html
+++ b/home/templates/404.html
@@ -8,7 +8,7 @@
         <p style="font-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
 
         <p style="margin-top: 30px; fort-size: 18px; color: #444;">
-            <strong>Contact us:</strong>{{restaurant_name}}
+            <strong>Contact us:</strong>{{restaurant_phone}}
         </p>
     </body>
 </html>
