--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> {{ restaurant_name }} </title>
+        <title> {{ restaurant_name }} -Home </title>
     </head>
 
-    <body>
-        <h1>Welcome to {{ restaurant_name }}</h1>
+    <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
+        <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
+        <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
+
+
+        <p style="margin-top: 30px; fort-size: 18px; color: #444;">
+            <strong>Contant us:</strong>{{restaurant_phone}}
+        </p>
     </body>
 </html>
