--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> {{ restaurant_name }} -Home </title>
+        <title> {{ restaurant_name }} </title>
     </head>
 
-    <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
-        <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
-        <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
+    <body style="margin: 0; font-family: Arial, sans-sarif; background-color: #f4f4f4; color: #333; text-align: center;">
+        
+        <header style="background-color: #ff7043; padding: 20px">
+        <h1 style="margin: 0; color: white; font-size: 2.5rem;">Welcome to {{ restaurant_name }}</h1>
+        </header>
 
+        <main style="padding: 30px;">
+            <p style="font_size: 1.2rem; max-width: 600px; margin: auto;">
+                Experience the best food in town with fresh ingredients and great ambiance.
+            </p>
+            <a href="{% url 'menu_list' %}" style="display: inline-block; margin-top: 20px; padding: 12px 25px; background-color: #ff7043; color: white; text-decoration: none; font_size: 1.1rem; border-radius: 5px;">
+                view Menu
+            </a>
+        </main>
 
-        <p style="margin-top: 30px; fort-size: 18px; color: #444;">
-            <strong>Contant us:</strong>{{restaurant_phone}}
-        </p>
+        <footer style="background-color: #333; padding: 15px; color: white; position: fixed; bottom: 0; width: 100%;">
+            &copy; {{ now|date:"Y" }} {{ restaurant_name }}. All Rights Reserved.
+        </footer>
     </body>
 </html>
