--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -4,10 +4,10 @@
         <title> {{ restaurant_name }} </title>
     </head>
 
-    <body style="margin: 0; font-family: Arial, sans-sarif; background-color: #f4f4f4; color: #333; text-align: center;">
+    <body style="margin: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; color: #333; text-align: center;">
         
         <header style="background-color: #ff7043; padding: 20px">
-        <h1 style="margin: 0; color: white; font-size: 2.5rem;">Welcome to {{ restaurant_name }}</h1>
+        <h1 style="margin: 0; color: white; font-size: 3rem;">Welcome to {{ restaurant_name }}</h1>
         </header>
 
         <main style="padding: 30px;">
