--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -7,14 +7,17 @@
     <body style="margin: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; color: #333; text-align: center;">
         
         <header style="background-color: #ff7043; padding: 20px">
-        <h1 style="margin: 0; color: white; font-size: 3rem;">Welcome to {{ restaurant_name }}</h1>
+        <h1 style="margin: 0; color: white; font-size: 3rem;">
+            Welcome to {{ restaurant_name }}
+        </h1>
         </header>
 
         <main style="padding: 30px;">
             <p style="font_size: 1.2rem; max-width: 600px; margin: auto;">
                 Experience the best food in town with fresh ingredients and great ambiance.
             </p>
-            <a href="{% url 'menu_list' %}" style="display: inline-block; margin-top: 20px; padding: 12px 25px; background-color: #ff7043; color: white; text-decoration: none; font_size: 1.1rem; border-radius: 5px;">
+            <a href="{% url 'menu_list' %}" 
+                style="display: inline-block; margin-top: 20px; padding: 12px 25px; background-color: #ff7043; color: white; text-decoration: none; font_size: 1.1rem; border-radius: 5px;">
                 view Menu
             </a>
         </main>
