--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -12,28 +12,21 @@
         <!-- Header Section -->
         <header class="site-header">
 
-             <!-- Optional logo -->
-             <!-- <img src="{% static 'images/logo.png' %}" alt="{{ restaurant_name }} Logo" class="restaurant-logo"> -->
-        <h1>
-            Welcome to {{ restaurant_name }}
-        </h1>
+            <!-- Optional logo -->
+        <h1> Welcome to {{ restaurant_name } </h1>
         </header>
 
         <!-- ===== Main Content Section ===== -->
         <main class="site-main">
-            <p>
-                Experience the best food in town with fresh ingredients and great ambiance.
-            </p>
-
-            <a href="{% url 'menu_list' %}" class="btn">
-                view Menu
-            </a>
-            
+            <p>Experience the best food in town with fresh ingredients and great ambiance.</p>
+            <a href="{% url 'menu_list' %}" class="btn">view Menu</a>
         </main>
+
 
         <!-- ==== Footer Section ==== -->
         <footer class="site-footer">
-            &copy; {{ now|date:"Y" }} {{ restaurant_name }}. All Rights Reserved.
+            &copy; {{now|date:"Y"}} {{ restaurant_name }}. All Rights Reserved.
         </footer>
-    </body>
+
+</body>
 </html>
