--- a/static/css/home.css
+++ b/static/css/home.css
@@ -43,8 +43,11 @@ body {
 }
 
 .restaurant-footer {
+    text-align: center;
     background-color:#333;
-    padding:15px;
+    padding:15px 0;
+    margin-top: 30px;
+    font-size: 0.9em;
     color:white;
     position:fixed;
     bottom:0;
