--- a/home/templates/404.html
+++ b/home/templates/404.html
@@ -3,9 +3,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>404 - Page Not Found</title>
+
+
         <style>
             body {
-                font-family: Arial, sans-sarif;
+                font-family: Arial, sans-serif;
                 background-color: #f8f8f8;
                 text-align: center;
                 padding: 50px; 
@@ -32,6 +34,8 @@
             }
         </style>    
     </head>
+
+    
     <body>
         <h1>404</h1>
         <p>Oops! The page you are looking for does not exist.</p>
