--- a/home/templates/home/reservations.html
+++ b/home/templates/home/reservations.html
@@ -1,6 +1,6 @@
 <html lang="en">
     <head>
-        <meta charset="UFT-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Reservations</title>
         <style>
@@ -25,6 +25,6 @@
     </head>
     <body>
         <h1>Reservations Page</h1>
-        <p>Our online reservation systemis coming soon. Please check back leter!</p>
+        <p>Our online reservation system is coming soon. Please check back later!</p>
     </body>
 </html>
