--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> {{ restaurant_name }} -Home </title>
+        <title> {{ restaurant_name }} -Home </title> 
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
     </head>
-
     <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
         <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
         <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
