--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,8 +8,9 @@
 
     {% block content %}{% endblock %}
 
-
+    <!--Footer Section-->
     <footer class="restaurant-footer">
+        <!--Display current year dynamically and restaurant name -->
         &copy; {% now "y" %} {{restaurant_name}}. All Rights Reserved.
     </footer>
 
