--- a/home/templates/home/reservations.html
+++ b/home/templates/home/reservations.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!--<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,4 +27,15 @@
         <h1>Reservations Page</h1>
         <p>Our online reservation system is coming soon. Please check back later!</p>
     </body>
-</html>
+</html>-->
+
+{% extends 'base.html' %}
+
+{% block title %}Reservations - {{ restaurant_name }}{% endblock %}
+
+{% block content %}
+<div class="reservation-container">
+    <h1> Reservations Page</h1>
+    <p> Our online reservation systrm is coming soon. Please check back later!</p>
+</div>
+{% endblock %}
