--- a/home/templates/home/reservations.html
+++ b/home/templates/home/reservations.html
@@ -36,6 +36,6 @@
 {% block content %}
 <div class="reservation-container">
     <h1> Reservations Page</h1>
-    <p> Our online reservation systrm is coming soon. Please check back later!</p>
+    <p> Our online reservation system is coming soon. Please check back later!</p>
 </div>
 {% endblock %}
