--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/contact.css' %}">
 </head>
 <body>
+    <!--Contact Page Container -->
     <div class="container">
         <h1> Contact Us</h1>
         <p><span class="highlight">Address:</span> 123 Main Street, Your City, India</p>
@@ -38,8 +39,9 @@
             if (name === "" ||email === "") {
                 alert("Please fill in both your Name and Email.");
                 event.preventDefault();
+                return;
             }
-            else if(!emailPattern.test(email)){
+            if (!emailPattern.test(email)){
                 alert("please enter a valid email address.");
                 event.preventDefault();    
             }
