--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -11,7 +11,9 @@
     <!--Footer Section-->
     <footer class="restaurant-footer">
         <!--Display current year dynamically and restaurant name -->
-        &copy; {% now "y" %} {{restaurant_name}}. All Rights Reserved.
+        &copy; {% now "Y" %} {{restaurant_name}}. All Rights Reserved.
+        <br> 
+        Opening Hours: Mon-Fri: 11am - 9pm | Sat-Sun: 10am -10pm
     </footer>
 
 </body>
