--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,4 @@
+/* General Page Styles */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -7,6 +8,7 @@ body {
     padding: 0;
 }
 
+/*Header Styles*/
 .restaurant-header {
     background-color: #ff7043;
     padding: 20px;
@@ -20,6 +22,7 @@ body {
     font-size: 3rem;
 }
 
+/* Main Section Styles */
 .restaurant-main {
     text-align: center;
     padding: 30px;
@@ -31,6 +34,7 @@ body {
     margin-bottom: 20px;
 }
 
+/* Button Styles */
 .btn {
     display: inline-block;
     padding: 10px 20px;
@@ -45,6 +49,7 @@ body {
     background-color: #219150;
 }
 
+/* Footer Styles */
 .restaurant-footer {
     text-align: center;
     background-color:#2c3e50;
@@ -55,6 +60,7 @@ body {
     position: fixed;
 }
 
+/* Reservations Page Styles */
 .reservations-container {
     text-align: center;
     padding: 50px;
@@ -68,4 +74,11 @@ body {
 .reservations-container p {
     color: #666;
     font-size: 18px;
+}
+
+.footer-hours{
+    display: block;
+    font-size: 13px;
+    color: #ccc;
+    margin-top: 5px ;
 }
