--- a/static/css/home.css
+++ b/static/css/home.css
@@ -82,3 +82,31 @@ body {
     color: #ccc;
     margin-top: 5px ;
 }
+
+.search-container {
+    margin: 20px auto;
+    text-align: center;
+}
+
+.search-input{
+    padding: 10px;
+    width: 250px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.search-button {
+    padding: 10px 15px;
+    background-color: #27ae60;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    margin-left: 5px;
+    corsor: pointer;
+}
+
+.search-button:hover {
+    background-color: #219150;
+}
