--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{restaurant_name}}</title>
-    <link rel="stylesheet" href="{% static 'css/home.css'%}">
-</head>
-<body>
-        <!-- Header Section -->
-        <header class="restaurant-header">
+<html>
+    <head>
+        <title> {{ restaurant_name }} -Home </title>
+    </head>
 
-        <!-- Optional logo -->
-        <h1>Welcome to {{restaurant_name}}</h1>
-        </header>
+    <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
+        <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
+        <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
 
-        <!-- ===== Main Content Section ===== -->
-        <main class="restaurant-main">
 
-            <p>Experience the best food in town with fresh ingredients and great ambiance.</p>
-            <a href="{% url 'menu_list' %}" class="btn">view Menu</a>
-        </main>
+        <p style="margin-top: 30px; fort-size: 18px; color: #444;">
+            <strong>Contant us:</strong>{{restaurant_phone}}
+        </p>
 
-        <!-- ==== Footer Section ==== -->
-        <footer class="restaurant-footer">&copy; {{now|date:"Y"}} {{ restaurant_name }}. All Rights Reserved.</footer>
-</body>
+
+        <!--search bar-->
+        <div style="margin-top: 30px;">
+            <form method="GET" action="">
+                <input type="text" name="q" placeholder="search menu item..."
+                       style="padding: 10px; width: 250px; border: 1px solid #ccc; border-radius: 5px;">
+                <button type="submit"
+                        style="padding: 10px 15px; background-color: #27ae60; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                    search
+                </button>
+            </form>
+        </div>
+    </body>
 </html>
