--- a/home/templates/home/feedback.html
+++ b/home/templates/home/feedback.html
@@ -19,12 +19,12 @@
                 resize: vertical;
             }
             button {
-                paddind: 10px 15px;
+                padding: 10px 15px;
                 background-color: #27ae60;
                 color: white;
                 border: none;
                 border-radius: 5px;
-                corsor: pointer; 
+                cursor: pointer; 
             }
             button:hover {
                 background-color: #1e8449
