--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,8 +1,46 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> {{ restaurant_name }} -Home </title>
+    </head>
 
-{% block title %}Home - {{restaurant_name}}{% endblock %}
+    <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
+        <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
+        <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
 
-{% block content %}
-            <p>Experience the best food in town with fresh ingredients and great ambiance.</p>
-            <a href="{% url 'menu_list' %}" class="btn">view Menu</a>
-{% endblock %}
+
+        <p style="margin-top: 30px; fort-size: 18px; color: #444;">
+            <strong>Contant us:</strong>{{restaurant_phone}}
+        </p>
+
+
+        <!--search bar-->
+        <div style="margin-top: 30px;">
+            <form method="GET" action="">
+                <input type="text" name="q" placeholder="search menu item..."
+                       style="padding: 10px; width: 250px; border: 1px solid #ccc; border-radius: 5px;">
+                <button type="submit"
+                        style="padding: 10px 15px; background-color: #27ae60; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                    search
+                </button>
+            </form>
+        </div>
+
+        <!--Menu Section -->
+        <h2 style="margin-top: 40px; color: #333;">Our Menu</h2>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;">
+            {% if menu_items %}
+                {% for itme in menu_items %}
+                    <div style="background-color: white; padding: 20px; border-radius: 8px; width:250px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+                        <h3 style="margin: 0; color: #27ae60;">{{ item.name }}</h3>
+                        <p style="color: #555;">{{ item.description }}</p>
+                        <p style="font-weight: bold; color: #000;">{{ item.price }}</p>
+                        <p style="font-size: 14; color: #777;">Category:{{ item.category }}</p>
+                    </div>
+                {% endif %}
+            {% else %}
+                <p style="color: #777;">No menu items available at the moment.</p>
+            {% endif %}
+        </div>
+    </body>
+</html>
