--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -4,9 +4,9 @@
         <title> {{ restaurant_name }} -Home </title>
     </head>
 
-    <body style="fort-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
+    <body style="font-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
         <h1 style="color: #333;">Welcome to {{ restaurant_name }}</h1>
-        <p style="fort-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
+        <p style="font-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
 
 
         <p style="margin-top: 30px; fort-size: 18px; color: #444;">
@@ -30,14 +30,14 @@
         <h2 style="margin-top: 40px; color: #333;">Our Menu</h2>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 20px;">
             {% if menu_items %}
-                {% for itme in menu_items %}
+                {% for item in menu_items %}
                     <div style="background-color: white; padding: 20px; border-radius: 8px; width:250px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
                         <h3 style="margin: 0; color: #27ae60;">{{ item.name }}</h3>
                         <p style="color: #555;">{{ item.description }}</p>
                         <p style="font-weight: bold; color: #000;">{{ item.price }}</p>
                         <p style="font-size: 14; color: #777;">Category:{{ item.category }}</p>
                     </div>
-                {% endif %}
+                {% endfor %}
             {% else %}
                 <p style="color: #777;">No menu items available at the moment.</p>
             {% endif %}
