--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -69,6 +69,9 @@
         {% else %}
             <p style="margin-top:20px; font-size: 16px; color:#777;"><em>--Opening hours not avilable</em></p>
         {% endif %}
-
+        {% if item.image %}
+            <img src="{{ item.image.url }}" alt="{{ item.name }}"
+                style="width:100%; height:150px; object-fit:cover; border-radius: 5px; margin-bottom: 10px;">
+        {% endif %}
     </body>
 </html>
