--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -73,5 +73,12 @@
             <img src="{{ item.image.url }}" alt="{{ item.name }}"
                 style="width:100%; height:150px; object-fit:cover; border-radius: 5px; margin-bottom: 10px;">
         {% endif %}
+
+        <!--Phone Number Section-->
+        {% if restaurant_info %}
+            <p style="mergin-top: 30px; font-size: 18px; color: #777;">
+                <em>Phone number not aviailable</em>
+            </p>
+        {% endif %}
     </body>
 </html>
