--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title> {{ restaurant_name }} -Home </title>
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
     </head>
 
     <body style="font-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
         {% if restaurant_info and restaurant_info.logo %}
-            <div style="margin-bottom: 20px;">
+            <div class="restaurant-logo-container">
                 <img src="{{ restaurant_info.logo.https://img.freepik.com/vektoren-kostenlos/gradient-logo-design-fuer-restaurant_23-2151257068.jpg?semt=ais_hybrid&w }}"
                  alt="{{ restaurant_info.name }} Logo" 
                  class="restaurant-logo">
