--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -5,12 +5,13 @@
         <link rel="stylesheet" href="{% static 'css/home.css' %}">
     </head>
 
-    <body style="font-family: Arial, sans-serif; background-color: #f5f5f5; padding: 40px; text-align: center;">
+    <body>
         {% if restaurant_info and restaurant_info.logo %}
             <div class="restaurant-logo-container">
-                <img src="{{ restaurant_info.logo.url}}"
-                 alt="{{ restaurant_info.name }} Logo" 
-                 class="restaurant-logo"
+                <img 
+                    src="{{ restaurant_info.logo.url}}"
+                    alt="{{ restaurant_info.name }} Logo" 
+                    class="restaurant-logo"
                  />
             </div>
         {% endif %}
@@ -19,10 +20,6 @@
         <h2 style="color:#444; margin-top:20px;">Results for "{{ query }}"</h2>
         <p style="font-size: 20px; color: #666;">Enjoy tasty dishes and friendly service!</p>
 
-
-        <p style="margin-top: 30px; fort-size: 18px; color: #444;">
-            <strong>Contant us:</strong>{{restaurant_phone}}
-        </p>
         <!--Address Section-->
         {% if restaurant_location %}
             <div style="margin-top: 20px; font-size: 16px; color: #444;">
@@ -67,7 +64,7 @@
         </p>
 
         <!--Opening Hours Section-->
-        {% if restaurant_info and restaurant_info.--Opening_hours %}
+        {% if restaurant_info.--Opening_hours %}
             <h2 style="margin-top: 30px; color: #333;">--Opening Hours</h2>
             <div style="margin-top: 15px; font-size: 16px; color:#444: display:inline-block; text-align:left;">
                 <ul style="list-style:none; padding:0;">
@@ -80,14 +77,13 @@
             <p style="margin-top:20px; font-size: 16px; color:#777;"><em>--Opening hours not avilable</em></p>
         {% endif %}
         {% if item.image %}
-            <img src="{{ item.image.url }}" alt="{{ item.name }}"
-                style="width:100%; height:150px; object-fit:cover; border-radius: 5px; margin-bottom: 10px;">
+            <img src="{{ item.image.url }}" alt="{{ item.name }}">
         {% endif %}
 
         <!--Phone Number Section-->
         {% if restaurant_info %}
-            <p style="mergin-top: 30px; font-size: 18px; color: #777;">
-                <em>Phone number not aviailable</em>
+            <p style="margin-top: 30px; font-size: 18px; color: #777;">
+                <em>Phone number not available</em>
             </p>
         {% endif %}
     </body>
