--- a/static/css/home.css
+++ b/static/css/home.css
@@ -122,3 +122,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
+
+.cart-count  {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+}
