--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,5 +31,5 @@
         <section class="welcome-section">
             <h1>Welcome to Our Restaurant</h1>
             <p>Where Flavor Meets Comfort!</p>
-    </body?
+    </body>
 </html>
